--- a/.travis.yml
+++ b/.travis.yml
@@ -16,57 +16,8 @@ matrix:
     - compiler: clang
 
 before_install:
-  # Repository for gcc
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-
-  # Repository for clang
-  - sudo add-apt-repository -y ppa:h-rayflood/llvm
-  - sudo add-apt-repository -y ppa:h-rayflood/llvm-upper
-  - sudo add-apt-repository -y ppa:h-rayflood/gcc-upper
-
-  # Update packages
-  - sudo apt-get update -qq
-
-  # Install gcc
-  - sudo apt-get -qq --allow-unauthenticated install gcc-${LIBSTDC_VERSION} g++-${LIBSTDC_VERSION}
-
-  # Install clang
-  - sudo apt-get -qq --allow-unauthenticated install clang-${CLANG_VERSION} clang++-${CLANG_VERSION}
-
-  # Install libc++ for clang
-  - export CXXFLAGS="-std=c++0x -stdlib=libc++"
-  - svn co --quiet http://llvm.org/svn/llvm-project/libcxx/trunk libcxx
-  - cd libcxx/lib && bash buildit
-  - sudo cp ./libc++.so.1.0 /usr/lib/
-  - sudo mkdir /usr/include/c++/v1
-  - cd .. && sudo cp -r include/* /usr/include/c++/v1/
-  - cd /usr/lib && sudo ln -sf libc++.so.1.0 libc++.so
-  - sudo ln -sf libc++.so.1.0 libc++.so.1 && cd $cwd
-
-  # Update alternatives for gcc
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${LIBSTDC_VERSION} 50
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${LIBSTDC_VERSION} 50
-
-  # Update alternatives for clang
-  - sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${CLANG_VERSION} 50
-  - sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-${CLANG_VERSION} 50
-
-  # Export gcc
-  - export CXX="g++-${LIBSTDC_VERSION}"
-  - export CC="gcc-${LIBSTDC_VERSION}"
-
-  # Export clang
-  - export CXX="clang++-${CLANG_VERSION}"
-  - export CC="clang-${CLANG_VERSION}"
-
-before_script:
-  # Display versions
-  - lsb_release -a
-  - uname -a
-  - gcc --version
-  - g++ --version
-  - $CC --version
-  - $CXX --version
+  - if [[ "$CXX" == "g++" || "$CC" == "gcc" ]]; then ./scripts/gcc.sh; fi
+  - if [[ "$CXX" == "clang++" || "$CC" == "clang" ]]; then ./scripts/clang.sh; fi
 
 script:
   - make clean && make
