--- a/.travis.yml
+++ b/.travis.yml
@@ -15,26 +15,18 @@ matrix:
   allow_failures:
     - compiler: clang
 
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    - h-rayflood/llvm
-    - h-rayflood/llvm-upper
-    - h-rayflood/gcc-upper
-
-    packages:
-    - cmake
-    - gcc-5.0
-    - g++-5.0
-    - clang
-
 before_install:
   - if [[ "$CXX" == "g++" || "$CC" == "gcc" ]]; then ./scripts/gcc.sh; fi
   - if [[ "$CXX" == "clang++" || "$CC" == "clang" ]]; then ./scripts/clang.sh; fi
 
+  # Debug information
+  - lsb_release -a
+  - uname -a
+  - $CC --version
+  - $CXX --version
+
 script:
-  - make clean && make
+  - make clean && make CXX=$CXX
 
 notifications:
   email: false
